--- a/example/package.json
+++ b/example/package.json
@@ -43,7 +43,7 @@
     "test:e2e:run": "npm run test:e2e:run --silent --prefix playground",
     "setup": "node ./epicshop/setup.js",
     "setup:custom": "node ./epicshop/setup-custom.js",
-    "lint": "eslint . --concurrency=auto",
+    "lint": "oxlint .",
     "format": "prettier --write .",
     "typecheck": "tsc -b",
     "validate:all": "npm-run-all --parallel --print-label --print-name --continue-on-error test:all lint typecheck"
@@ -52,8 +52,7 @@
   "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
   "license": "MIT",
   "devDependencies": {
-    "@epic-web/config": "^1.24.0",
-    "eslint": "^9.39.2",
+    "@epic-web/config": "^1.24.1",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3"
   },
