--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "@epic-web/config": "^1.24.0",
+    "@epic-web/config": "^1.24.1",
     "@nx/devkit": "22.5.0",
-    "@nx/eslint": "22.5.0",
     "@nx/js": "22.5.0",
     "@nx/playwright": "22.5.0",
     "@nx/workspace": "22.5.0",
@@ -39,12 +38,12 @@
     "@types/yargs": "^17.0.35",
     "cross-env": "^10.1.0",
     "dotenv": "^17.3.0",
-    "eslint": "^9.39.2",
     "execa": "^9.6.1",
     "get-stream": "^9.0.1",
     "globby": "^16.1.0",
     "npm-run-all": "^4.1.5",
     "nx": "22.5.0",
+    "oxlint": "^1.50.0",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "react-router": "^7.13.0",
