--- a/packages/workshop-app/package.json
+++ b/packages/workshop-app/package.json
@@ -29,7 +29,7 @@
     "build:server": "tsx ./other/build-dir.ts server",
     "dev": "node ./server/dev-server.js",
     "format": "prettier --write .",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "oxlint .",
     "start": "cross-env NODE_ENV=production node ./start.js",
     "typecheck": "react-router typegen && tsc --noEmit",
     "validate": "run-p lint typecheck"
@@ -137,7 +137,6 @@
     "@types/wait-on": "^5.3.4",
     "@types/ws": "^8.18.1",
     "@vitest/browser-playwright": "^4.0.18",
-    "eslint": "^9.39.2",
     "mdast-util-mdx-jsx": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.8.1",
