chore: update Oxlint command to use npm exec

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -49,7 +49,7 @@ jobs:
           .prettierignore
 
       - name: 🔍 Run Oxlint --fix
-        run: oxlint . --fix
+        run: npm exec -- oxlint . --fix
 
       - name: 💾 Commit changes
         run: |
